Hide "show column in bugzilla" button from collapsed columns

--- a/data/kanbugger.css
+++ b/data/kanbugger.css
@@ -38,3 +38,7 @@
     font-size: 11px !important;
     line-height: 16px !important;
 }
+
+.column-view.minimized a.bz {
+    display: none;
+}
